src/test/deca/context/invalid/provided/incompatible_object_assignment_error.deca
// Description:
//    Tentative d’assigner un objet d’une classe à une variable d’un type non compatible.
//
// Résultats:
//    incompatible_object_assignment_error.deca:21:15: Type incompatible : attendu A, trouvé B
//
// Historique:
//    créé le 19/01/2025
class A {
    int fieldA;
    protected int b;
}

class B extends A{
    int fieldB;
}

{
    B c=new B();
    int a=c.b;
}
